fixing color contrast

--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,18 @@
 header{
     display: grid;
     grid-template-columns: 30% 70%;
-    background-color: rgb(205, 127, 50);
+    background-color: rgb(255, 215, 0);
     color: rgb(4, 99, 7);
     font-size: 24pt;
     text-align: center;
     align-items: center;
 }
 footer{
-    background-color: rgb(205, 127, 50);
+    background-color: rgb(255, 215, 0);
     color: rgb(4, 99, 7);
     text-align: center;
     align-items: center;
 }
 #updatediv{
-    color: rgb(192, 192, 192);
+    color: black;
 }
